--- a/style/css/in.css
+++ b/style/css/in.css
@@ -482,7 +482,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_show_n li:hover .info{background: url(../images/pro_jthover.jpg) no-repeat 315px center #da0001;height: 60px;position: absolute;top:247px;left:0px;width:100%;text-indent: 20px;line-height: 60px;}
+ .pro_show_n li:hover .info{background: url(../images/pro_jthover.jpg) no-repeat 315px center #f39800;height: 60px;position: absolute;top:247px;left:0px;width:100%;text-indent: 20px;line-height: 60px;}
 
 
 
@@ -702,7 +702,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .td_left li.tag_td{color:#da0001;border-bottom: 2px solid #da0001;}
+ .td_left li.tag_td{color:#f39800;border-bottom: 2px solid #f39800;}
 
 
 
@@ -710,7 +710,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .td_left li.tag_td h4{color:#da0001;}
+ .td_left li.tag_td h4{color:#f39800;}
 
 
 
@@ -998,7 +998,7 @@ overflow:hidden;}
 
 
 
-.ys_dbg .u_dlst1 h3 a{ color: #da0001;;}
+.ys_dbg .u_dlst1 h3 a{ color: #f39800;;}
 
 
 
@@ -1078,7 +1078,7 @@ overflow:hidden;}
 
 
 
- .gg1{background: url(../images/gg2.jpg) no-repeat top center;height: 200px;}
+ .gg1{background: url(../../images/32.jpg) no-repeat top center;height: 200px;}
 
 
 
@@ -1110,7 +1110,7 @@ overflow:hidden;}
 
 
 
-.gg1_tel a{width:155px;height: 40px;display: block;line-height: 40px;text-align: center;background: #da0001;font-size: 20px;color:#FFF;  margin:10px 0 0  0px; }
+.gg1_tel a{width:155px;height: 40px;display: block;line-height: 40px;text-align: center;background: #f39800;font-size: 20px;color:#FFF;  margin:10px 0 0  0px; }
 
 
 
@@ -1806,11 +1806,11 @@ padding:20px;
 
 
 
-.news_nav h3.tag_news a{color:#da0001;}
+.news_nav h3.tag_news a{color:#f39800;}
 
 
 
-.news_nav h3.tag_news{border-bottom: 2px solid #da0001;}
+.news_nav h3.tag_news{border-bottom: 2px solid #f39800;}
 
 
 
@@ -1870,7 +1870,7 @@ padding:20px;
 
 
 
- .cjwq_nav h3{border-bottom: 2px solid #da0001;float: left;}
+ .cjwq_nav h3{border-bottom: 2px solid #f39800;float: left;}
 
 
 
@@ -1878,7 +1878,7 @@ padding:20px;
 
 
 
-.cjwq_nav h3 a{font-size: 18px; color: #da0001;font-weight: bold;}
+.cjwq_nav h3 a{font-size: 18px; color: #f39800;font-weight: bold;}
 
 
 
