--- a/style/css/css.css
+++ b/style/css/css.css
@@ -12,8 +12,8 @@ ul,li,ol,h1,h2,h3,dl,dt,dd,form,p,b,u,s,i{list-style:none;margin:0; padding:0; f
 input,textarea{outline:none;border:0px;}/*去掉输入框得到焦点时边框会出现阴影效果----例如360 火狐*/
 a{blr:expression(this.onFocus=this.blur()); /* IE Opera */ outline:none; /* FF Opera */} a:focus{-moz-outline-style: none; /* FF */} /*去掉a标签超链接的虚线框*/
 .clearboth{clear:both}
-a:link{text-decoration: none;color: #404040;}
-a:visited{text-decoration: none; color: #404040;}
+a:link{text-decoration: none;color: #f39800;}
+a:visited{text-decoration: none; color: #FFF;}
 a:hover{text-decoration: none; color: #313131;transition: all 0.3s ease-out 0s;}
 a:active{text-decoration: none; color: #404040;}
 em{font-style:normal;}
@@ -49,7 +49,7 @@ body{margin: 0px; color:#404040; background:#FFF; font-size: 14px; font-family:"
 .nav_bg li.another,.nav_bg li:hover{background:#f39800;cursor: pointer;}
 .nav_bg li:hover a{color:#FFF;}
 .fixedNav{position: fixed;top: 0px; left: 0px; width: 100%; z-index: 100000;_position: absolute; _top: expression(eval(document.documentElement.scrollTop));}
-.end_dbg{background: url(../images/end_x.jpg) no-repeat top center #181818;height: 312px;}
+.end_dbg{background: url(../images/end_x.jpg) no-repeat top center #181818;height: 250px;}
 .end_left{width:950px;margin:80px 0 0 0;background: url(../images/end_tag.png) no-repeat left 10px;padding-left: 38px;} .end_left{color: #dedede;line-height: 32px;} .end_left a{color: #dedede;} .end_left h2{font-size: 14px;display: inline;} .end_ewm{width:153px;height: 153px;margin:80px 0 0 0;}
 .end_ewm img{width:153px;height: 153px;} .end_char{background: url(../images/end_tx.jpg) no-repeat top center #f7f7f7;height: 108px;margin-top: 0px;line-height: 118px;overflow: hidden;} .end_char li{font-size: 16px;color: #222;float: left;width:238px;text-align: center;text-indent: 40px;} .end_char ul{width:105%;} ::selection{background-color: #313131; color:#FFF;}
 ::-moz-selection{background-color: #313131;color:#FFF;}
