--- a/style/css/in.css
+++ b/style/css/in.css
@@ -522,7 +522,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.pro_c li{width:168px;height: 46px;border: 1px solid #d2d2d2;background: #FFF;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
+.pro_c li{width:168px;height: 46px;border: 1px solid #d2d2d2;background: #f39800;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
 
 
 
@@ -1134,7 +1134,7 @@ overflow:hidden;}
 
 
 
-.honor_n{height: 410px;background: #f5f5f5;margin-top: 22px;padding-top: 20px;overflow: hidden;}
+.honor_n{height: 230px;background: #f5f5f5;margin-top: 0px;padding-top: 0px;overflow: hidden;}
 
 
 
@@ -1262,11 +1262,11 @@ overflow:hidden;}
 
 
 
-  width: 222px;
+  /*width: 222px;*/
 
 
 
-  height: 320px;
+  /*height: 320px;*/
 
 
 
@@ -1510,7 +1510,7 @@ padding:20px 30px;
 
 
 
- .kehu_n li .info  a.t{ height: 40px;line-height: 40px;display: block; overflow: hidden;font-size: 18px;border-bottom: 1px solid #ddd; color:#000;}
+ .kehu_n li .info  a.t{ height: 40px;line-height: 40px;display: block; overflow: hidden;font-size: 18px;border-bottom: 1px solid #ddd; color:#f39800;}
 
 
 
@@ -1630,7 +1630,7 @@ padding:20px 30px;
 
 
 
- .about_n{width: 590px;height: 410px;background: #313131; }
+ .about_n{width: 590px;height: 410px;background: #f39800; }
 
 
 
@@ -1654,7 +1654,7 @@ padding:20px 30px;
 
 
 
-  .about_n .con {font-size: 15px;line-height: 32px;color: #e8e8e8;height:256px;display: block;overflow: hidden; text-indent: 2em;margin:25px 20px 20px ; }
+  .about_n .con {font-size: 15px;line-height: 32px;color: #fff;height:256px;display: block;overflow: hidden; text-indent: 2em;margin:25px 20px 20px ; }
 
 
 
@@ -2034,7 +2034,7 @@ color:#000;overflow: hidden;font-size: 16px;}
 
 
 
-          .links_n a{border-right: 1px dotted #222;  padding:0px 20px;}
+          .links_n a{border-right: 1px dotted #f39800;  padding:0px 20px;}
 
 
 
