--- a/style/css/in.css
+++ b/style/css/in.css
@@ -614,7 +614,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_t h4 {font-size: 36px; color: #313131;letter-spacing: 1px;}
+.td_t h4 {font-size: 36px; color: #f39800;letter-spacing: 1px;}
 
 
 
@@ -658,7 +658,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_dbg{background: url(../images/td_dbg.jpg) no-repeat bottom center #f1f1f1;height: 760px;overflow: hidden;}
+.td_dbg{background: url(../images/ys_dbg.jpg) no-repeat bottom center #f1f1f1;height: 760px;overflow: hidden;}
 
 
 
@@ -690,7 +690,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_left li h4{font-size: 24px;color: #313131;  
+.td_left li h4{font-size: 24px;color: #FFF;  
 
 
 
