--- a/style/css/in.css
+++ b/style/css/in.css
@@ -638,7 +638,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_t p{font-size: 14px;text-transform: uppercase;color: #989898;margin-top: 6px; }
+.td_t p{font-size: 14px;text-transform: uppercase;color: #f39800;margin-top: 6px; }
 
 
 
