--- a/style/css/in.css
+++ b/style/css/in.css
@@ -750,11 +750,11 @@ h4, h3 { font-weight: normal; }
 
 
 
-.case_t h3{background: url(../images/kehu_x.jpg) no-repeat center 20px;}
+/*.case_t h3{background: url(../images/kehu_x.jpg) no-repeat center 20px;}*/
 
 
 
-.case_t h3 a{font-size: 30px;color: #313131;font-weight: bold;}
+.case_t h3 a{font-size: 20px;color: #313131;font-weight: bold;}
 
 
 
