--- a/style/css/in.css
+++ b/style/css/in.css
@@ -342,7 +342,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_dbg{background: #f1f1f1;height: 1010px;}
+ .pro_dbg{background: #f1f1f1;height: 950px;}
 
 
 
@@ -422,7 +422,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.pro_show_n li{float: left; margin:0px 50px 0px 0;width:255px;height: 235px;display: block;overflow:hidden; text-align: center;position: relative;
+.pro_show_n li{float: left; margin:0px 50px 0px 0;width:360px;height: 330px;display: block;overflow:hidden; text-align: center;position: relative;
 
 
 
@@ -438,11 +438,11 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_show_n li .pic { width: 255px; height: 185px;  overflow: hidden; display: block;  }
+ .pro_show_n li .pic { width: 360px; height: 260px;  overflow: hidden; display: block;  }
 
 
 
-.pro_show_n li .pic img { width: 255px; height: 185px; }
+.pro_show_n li .pic img { width: 360px; height: 260px; }
 
 
 
@@ -522,11 +522,11 @@ h4, h3 { font-weight: normal; }
 
 
 
-.pro_c li{width:168px;height: 46px;border: 1px solid #d2d2d2;background: #f39800;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
+.pro_c li{width:150px;height: 46px;border: 1px solid #d2d2d2;background: #f39800;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
 
 
 
-.pro_c li:first-child{margin-left: 0px;}
+.pro_c li:first-child{margin-left: 60px;}
 
 
 
@@ -1134,7 +1134,7 @@ overflow:hidden;}
 
 
 
-.honor_n{height: 230px;background: #f5f5f5;margin-top: 0px;padding-top: 0px;overflow: hidden;}
+.honor_n{height: 230px;margin-top: 0px;padding-top: 0px;overflow: hidden;}
 
 
 
@@ -1166,7 +1166,7 @@ overflow:hidden;}
 
 
 
-  width: 312px;
+  width: 150px;
 
 
 
@@ -1178,7 +1178,7 @@ overflow:hidden;}
 
 
 
-  height: 380px;
+  height: 100px;
 
 
 
@@ -1194,11 +1194,11 @@ overflow:hidden;}
 
 
 
-  width: 222px;
+  width: 150px;
 
 
 
-  height: 320px;
+  height: 100px;
 
 
 
@@ -1206,7 +1206,7 @@ overflow:hidden;}
 
 
 
-  margin:0 0  15px 45px;
+  margin:0 0  15px 15px;
 
 
 
@@ -1598,7 +1598,7 @@ padding:20px 30px;
 
 
 
-.about_dbg{background: #f5f5f5;height: 735px;padding-top: 30px;overflow: hidden;}
+.about_dbg{background: #f5f5f5;padding-top: 30px;overflow: hidden;}
 
 
 
@@ -1834,7 +1834,7 @@ padding:20px;
 
 
 
-.news_n{position: relative;height: 363px;overflow: hidden;}
+.news_n{position: relative; overflow: hidden;}
 
 
 
@@ -1878,7 +1878,7 @@ padding:20px;
 
 
 
-.cjwq_nav h3 a{font-size: 18px; color: #f39800;font-weight: bold;}
+.cjwq_nav h3 a{font-size: 20px; color: #f39800;font-weight: bold;}
 
 
 
