--- a/style/css/style2.css
+++ b/style/css/style2.css
@@ -56,6 +56,11 @@
 	1.1 General  
 ----------------------------------------------- */
 
+.pic {width:200px; height:200px; overflow:hidden;}
+.pic img{transform:scale(1,1);transition: all 1s ease-out;}
+.pic img:hover{transform:scale(1.2,1.2);}
+
+
 body, html {
 	height: 100%;
 	margin: 0;
