--- a/style/css/bootstrap2.css
+++ b/style/css/bootstrap2.css
@@ -4,6 +4,11 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+
+.pic {width:200px; height:200px; overflow:hidden;}
+.pic img{transform:scale(1,1);transition: all 1s ease-out;}
+.pic img:hover{transform:scale(1.2,1.2);}
+
 html {
   font-family: "Microsoft YaHei", sans-serif;
   -webkit-text-size-adjust: 100%;
