--- a/style/css/in.css
+++ b/style/css/in.css
@@ -842,7 +842,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-transition:all .2s;
+transition:all 1s;
 
 
 
@@ -886,7 +886,7 @@ overflow:hidden;}
 
 
 
-transition:all .2s;
+transition:all 1s;
 
 
 
