--- a/style/css/in.css
+++ b/style/css/in.css
@@ -482,7 +482,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_show_n li:hover .info{background: url(../images/pro_jthover.jpg) no-repeat 315px center #f39800;height: 60px;position: absolute;top:247px;left:0px;width:100%;text-indent: 20px;line-height: 60px;}
+ .pro_show_n li:hover .info{background: url(../images/pro_jthover.jpg) no-repeat 315px center #ee7800;height: 60px;position: absolute;top:247px;left:0px;width:100%;text-indent: 20px;line-height: 60px;}
 
 
 
@@ -522,7 +522,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.pro_c li{width:150px;height: 46px;border: 1px solid #d2d2d2;background: #f39800;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
+.pro_c li{width:150px;height: 46px;border: 1px solid #d2d2d2;background: #ee7800;line-height: 46px;font-size: 16px;text-align: center;float: left;margin-left: 30px;}
 
 
 
@@ -614,7 +614,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_t h4 {font-size: 36px; color: #f39800;letter-spacing: 1px;}
+.td_t h4 {font-size: 36px; color: #ee7800;letter-spacing: 1px;}
 
 
 
@@ -638,7 +638,7 @@ h4, h3 { font-weight: normal; }
 
 
 
-.td_t p{font-size: 14px;text-transform: uppercase;color: #f39800;margin-top: 6px; }
+.td_t p{font-size: 14px;text-transform: uppercase;color: #ee7800;margin-top: 6px; }
 
 
 
@@ -702,7 +702,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .td_left li.tag_td{color:#f39800;border-bottom: 2px solid #f39800;}
+ .td_left li.tag_td{color:#ee7800;border-bottom: 2px solid #ee7800;}
 
 
 
@@ -710,7 +710,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .td_left li.tag_td h4{color:#f39800;}
+ .td_left li.tag_td h4{color:#ee7800;}
 
 
 
@@ -998,7 +998,7 @@ overflow:hidden;}
 
 
 
-.ys_dbg .u_dlst1 h3 a{ color: #f39800;;}
+.ys_dbg .u_dlst1 h3 a{ color: #ee7800;;}
 
 
 
@@ -1110,7 +1110,7 @@ overflow:hidden;}
 
 
 
-.gg1_tel a{width:155px;height: 40px;display: block;line-height: 40px;text-align: center;background: #f39800;font-size: 20px;color:#FFF;  margin:10px 0 0  0px; }
+.gg1_tel a{width:155px;height: 40px;display: block;line-height: 40px;text-align: center;background: #ee7800;font-size: 20px;color:#FFF;  margin:10px 0 0  0px; }
 
 
 
@@ -1510,7 +1510,7 @@ padding:20px 30px;
 
 
 
- .kehu_n li .info  a.t{ height: 40px;line-height: 40px;display: block; overflow: hidden;font-size: 18px;border-bottom: 1px solid #ddd; color:#f39800;}
+ .kehu_n li .info  a.t{ height: 40px;line-height: 40px;display: block; overflow: hidden;font-size: 18px;border-bottom: 1px solid #ddd; color:#ee7800;}
 
 
 
@@ -1630,7 +1630,7 @@ padding:20px 30px;
 
 
 
- .about_n{width: 590px;height: 410px;background: #f39800; }
+ .about_n{width: 590px;height: 410px;background: #ee7800; }
 
 
 
@@ -1806,11 +1806,11 @@ padding:20px;
 
 
 
-.news_nav h3.tag_news a{color:#f39800;}
+.news_nav h3.tag_news a{color:#ee7800;}
 
 
 
-.news_nav h3.tag_news{border-bottom: 2px solid #f39800;}
+.news_nav h3.tag_news{border-bottom: 2px solid #ee7800;}
 
 
 
@@ -1870,7 +1870,7 @@ padding:20px;
 
 
 
- .cjwq_nav h3{border-bottom: 2px solid #f39800;float: left;}
+ .cjwq_nav h3{border-bottom: 2px solid #ee7800;float: left;}
 
 
 
@@ -1878,7 +1878,7 @@ padding:20px;
 
 
 
-.cjwq_nav h3 a{font-size: 20px; color: #f39800;font-weight: bold;}
+.cjwq_nav h3 a{font-size: 20px; color: #ee7800;font-weight: bold;}
 
 
 
@@ -2034,7 +2034,7 @@ color:#000;overflow: hidden;font-size: 16px;}
 
 
 
-          .links_n a{border-right: 1px dotted #f39800;  padding:0px 20px;}
+          .links_n a{border-right: 1px dotted #ee7800;  padding:0px 20px;}
 
 
 
