--- a/style/css/css.css
+++ b/style/css/css.css
@@ -32,7 +32,7 @@ body{margin: 0px; color:#404040; background:#FFF; font-size: 14px; font-family:"
 .top_sw a{padding: 0px 18px 0 20px ;}
 /*<!--logo-->*/
 .top_bgk{height:137px; overflow:hidden;background: #f9f9f9;}
-.biaoyu{float:left; display:block; margin:40px 0 0 40px; font-size: 22px; line-height: 30px; color:#f39800; border-left: 1px solid #c2c2c2;padding:6px 0 0 40px;font-weight: bold;}
+.biaoyu{float:left; display:block; margin:40px 0 0 40px; font-size: 22px; line-height: 30px; color:#ee7800; border-left: 1px solid #c2c2c2;padding:6px 0 0 40px;font-weight: bold;}
 .biaoyu p{color: #313131; margin-top: 5px;font-size: 18px;}
 .logo_title{margin:30px 0 0 0px;}
 .logo_title a{font-size: 38px;font-weight: bold;color: #1d1c1c;letter-spacing: 9px;}
@@ -46,7 +46,7 @@ body{margin: 0px; color:#404040; background:#FFF; font-size: 14px; font-family:"
 .nav_bg ul{width:1200px;}
 .nav_bg li{height:60px; display:block; float:left; color:#FFF; text-align:center;font-size:15px; padding:0px 35px; background: url(../images/nav_tag.jpg) no-repeat right center;}
 .nav_bg li a{height:60px; display:block; color:#FFF; ;line-height:60px;}
-.nav_bg li.another,.nav_bg li:hover{background:#f39800;cursor: pointer;}
+.nav_bg li.another,.nav_bg li:hover{background:#ee7800;cursor: pointer;}
 .nav_bg li:hover a{color:#FFF;}
 .fixedNav{position: fixed;top: 0px; left: 0px; width: 100%; z-index: 100000;_position: absolute; _top: expression(eval(document.documentElement.scrollTop));}
 .end_dbg{background: url(../images/end_x.jpg) no-repeat top center #181818;height: 250px;}
