--- a/style/css/css.css
+++ b/style/css/css.css
@@ -54,3 +54,87 @@ body{margin: 0px; color:#404040; background:#FFF; font-size: 14px; font-family:"
 .end_ewm img{width:153px;height: 153px;} .end_char{background: url(../images/end_tx.jpg) no-repeat top center #f7f7f7;height: 108px;margin-top: 0px;line-height: 118px;overflow: hidden;} .end_char li{font-size: 16px;color: #222;float: left;width:238px;text-align: center;text-indent: 40px;} .end_char ul{width:105%;} ::selection{background-color: #313131; color:#FFF;}
 ::-moz-selection{background-color: #313131;color:#FFF;}
 ::-webkit-selection{background-color: #313131;color:#FFF;}
+
+ul {
+  /* 取消ul預設的內縮及樣式 */
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.drop-down-menu {
+  /*border: #ccc 1px solid;*/
+  display: inline-block;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 13px;
+}
+
+ul.drop-down-menu li {
+  position: relative;
+  white-space: nowrap;
+  /*border-right: #ccc 1px solid;*/
+}
+
+ul.drop-down-menu>li:last-child {
+  border-right: none;
+}
+
+ul.drop-down-menu>li {
+  float: left;
+  /* 只有第一層是靠左對齊*/
+}
+
+ul.drop-down-menu a {
+  background-color: #313131;
+  color: #fff;
+  display: block;
+  padding: 0 30px;
+  text-decoration: none;
+  /*line-height: 40px;*/
+}
+
+ul.drop-down-menu a:hover {
+  /* 滑鼠滑入按鈕變色*/
+  background-color: #ee7800;
+  color: #000;
+}
+
+ul.drop-down-menu li:hover>a {
+  /* 滑鼠移入次選單上層按鈕保持變色*/
+  background-color: #ee7800;
+  color: #000;
+}
+
+ul.drop-down-menu ul {
+  border: #ccc 1px solid;
+  position: absolute;
+  z-index: 99;
+  left: -1px;
+  top: 100%;
+  min-width: 180px;
+}
+
+ul.drop-down-menu ul li {
+  border-bottom: #ccc 1px solid;
+}
+
+ul.drop-down-menu ul li:last-child {
+  border-bottom: none;
+}
+
+ul.drop-down-menu ul ul {
+  /*第三層以後的選單出現位置與第二層不同*/
+  z-index: 999;
+  top: 10px;
+  left: 90%;
+}
+
+ul.drop-down-menu ul {
+  /*隱藏次選單*/
+  display: none;
+}
+
+ul.drop-down-menu li:hover>ul {
+  /* 滑鼠滑入展開次選單*/
+  display: block;
+}
