--- a/style/css/in.css
+++ b/style/css/in.css
@@ -490,7 +490,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_show_n li:hover .info a{color:#777;}
+ .pro_show_n li:hover .info a{color:#FFF;}
 
 
 
