--- a/style/css/common.css
+++ b/style/css/common.css
@@ -256,7 +256,7 @@ li:hover .item-mask{opacity: 1; -webkit-transform: rotateX(0deg) scale(1, 1); tr
 .list01 .list ul{width: 1200px;}
 .list01 .list ul li{float: left; width: 535px; border: 1px solid #e4e4e4; height: 98px; position: relative; -webkit-transition: all .8s ease-out; transition: all .8s ease-out; background-color: rgba(255, 255, 255, .8); *background-color: #fff; _background-color: #fff; margin: 0 60px 20px 0;}
 .list01 .list ul li:hover{border: 1px solid #f00; transform: translate(-10px, -10px); -webkit-transform: translate(-10px, -10px); box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2)}
-.list01 .list ul li .more{display: block; width: 15px; height: 15px; position: absolute; right: 0; top: 0; background-image: url(../images/more2.png); background-repeat: no-repeat; background-position: center center; background-color: #999;}
+.list01 .list ul li .more{display: block; width: 15px; height: 15px; position: absolute; right: 0; top: 0; background-image: url(../images/more2.png); background-repeat: no-repeat; background-position: center center; background-color: #ee7800;}
 .list01 .list ul li:hover .more{background-color: #f00;}
 .list01 .list dl dt{float: left; width: 125px; height: 98px; color: #999; position: relative;}
 .list01 .list dl dt .date{position: absolute; z-index: 99; left: 30px; top: 10px;}
