--- a/style/css/style2.css
+++ b/style/css/style2.css
@@ -64,7 +64,7 @@ body, html {
 	margin: 0;
 	padding: 0;
 	background-color: #f1f1f1;
-	width: 1393px;
+	/*width: 1393px;*/
 }
 body {
 	line-height: 24px;
