--- a/style/css/in.css
+++ b/style/css/in.css
@@ -10,7 +10,7 @@
 
 
 
-  width: 100%;
+  width: 1393px;
 
 
 
@@ -342,7 +342,7 @@ h4, h3 { font-weight: normal; }
 
 
 
- .pro_dbg{background: #f1f1f1;height: 950px;width: 1180px;margin: 0 auto;}
+ .pro_dbg{background: #f1f1f1;height: 950px;width: auto;margin: 0 auto;}
 
 
 
