--- a/style/css/style2.css
+++ b/style/css/style2.css
@@ -63,8 +63,7 @@ body, html {
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	background-color: #f1f1f1;
-	/*width: 1393px;*/
+	/*background-color: #f1f1f1;*/
 }
 body {
 	line-height: 24px;
