--- a/style/css/blog.css
+++ b/style/css/blog.css
@@ -173,7 +173,7 @@ ul.blog_list_info li a {
 }
 
 .blog_info {
-    min-height: 334px;
+    /*min-height: 334px;*/
     padding: 2em;
     border: 3px solid #f5f5f5;
     background-color: #f5f5f5;
